--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,14 @@ body {
   border: 1px solid rgb(173, 171, 171);
   background: rgba(255, 255, 255, .75);
   outline: none;
+  color: #272525;
 }
 
 .calculator > button:hover,
 .calculator > button:focus {
  background: rgba(255, 255, 255, .9);
+  border: 1px solid rgb(51, 50, 50);
+ color: #1f1919;
 }
 
 
@@ -46,7 +49,7 @@ body {
 }
 
 .output .previous-operand {
-  color: rgba(255, 255, 255, .75);
+  color: rgba(255, 255, 255, .79);
   font-size: 1.5rem;
 }
 .output .current-operand {
